# Telegram-RCON-Bot

./: Config.py  README.md  add_super_admin.py  bot.py  config.yaml  create_bot.py  pyproject.toml  requirements.txt  обязательно прочесть  токен
.github/: FUNDING.yml
.github/workflows/: black.yml
custom_filters/: __init__.py  text_list.py
handlers/: __init__.py  admin.py  client.py  common.py  other.py
keyboards/: __init__.py  kb_admin.py  kb_client.py  kb_common.py  kb_other.py  main_menu.py
locales/: lang.py
logger/: __init__.py  group_logger.py  log.py
minecraft/: rcon.py
provider/: __init__.py  databases.py  sqlite_db.py
resources/: __init__.py  config.py
routers/: __init__.py  admin.py  client.py  common.py  other.py
